<resources>
    <string name="app_name">Calculator</string>
    <string name="button1" translatable="false">1</string>
    <string name="button2" translatable="false">2</string>
    <string name="button3" translatable="false">3</string>
    <string name="button4" translatable="false">4</string>
    <string name="button5" translatable="false">5</string>
    <string name="button6" translatable="false">6</string>
    <string name="button7" translatable="false">7</string>
    <string name="button8" translatable="false">8</string>
    <string name="button9" translatable="false">9</string>
    <string name="button0" translatable="false">0</string>
    <string name="dot_button" translatable="false">.</string>
    <string name="clear_button" translatable="false">C</string>
    <string name="clear_all_button" translatable="false">CE</string>
    <string name="plus_button" translatable="false">+</string>
    <string name="minus_button" translatable="false">-</string>
    <string name="multiply_button" translatable="false">*</string>
    <string name="divide_button" translatable="false">/</string>
    <string name="equal_button" translatable="false">=</string>
    <string name="result">Result</string>
    <string name="converter">Converter</string>
    <string name="swipe">Swipe</string>
    <string name="convert">Convert</string>
    <string name="swap">Swap</string>
    <string name="hint">Hint</string>

    <string-array name="convert2">
        <item>Kilograms</item>
        <item>Meters</item>
        <item>Celsius</item>
    </string-array>

    <string-array name="convert1">
        <item>Pounds</item>
        <item>Foots</item>
        <item>Kelvins</item>
    </string-array>

    <string-array name="spinnerItems">
        <item>Weight</item>
        <item>Length</item>
        <item>Temperature</item>
    </string-array>
    <string name="input_field">Input Field</string>

</resources>
